syntax = "proto3";

package core;

message Block {
    uint64 low = 1;
    uint64 high = 2;
}

message RistrettoPoint {
    bytes point = 1;
}